# SLAM_and_AutomaticTargetDetection_UsingNeuromorphicEventCamera

ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros_ws/devel/.private/catkin_tools_prebuild/: .catkin
ros_ws/devel/.private/hello_world/: local_setup.sh
ros_ws/devel/include/hello_world/: BoundingBoxWithTime.h  Event.h  EventArray.h
ros_ws/devel/lib/hello_world/: bag_to_h5_node.py  bounding_box_publisher.py  event_img_subscriber.py  generate_poses.py  sync_nod.py  sync_node.py
ros_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  hello_world.pc
ros_ws/logs/hello_world/: build.check.006.log.stderr
ros_ws/src/hello_world/: CMakeLists.txt
ros_ws/src/hello_world/launch/: bag_to_h5.launch
ros_ws/src/hello_world/msg/: BoundingBoxWithTime.msg
ros_ws/src/hello_world/scripts/: bag_to_h5_node.py  bounding_box_publisher.py  event_img_subscriber.py  generate_poses.py  sync_nod.py
rpg_ultimate_slam_open/applications/ze_vio_ceres/: CMakeLists.txt  package.xml
rpg_ultimate_slam_open/applications/ze_vio_ceres/launch/: ijrr17_events_only.launch  (+2 more)
rpg_ultimate_slam_open/ui/ze_visualization/: CMakeLists.txt
ssms_event_cameras/: pipeline.py  stream_validation.py
ssms_event_cameras/RVT/: validation.py
ssms_event_cameras/RVT/modules/: detection.py
ssms_event_cameras/RVT/node/: initialize_node_bb.py
ssms_event_cameras/RVT/poses_code/: poses.py
ssms_event_cameras/RVT/utils/: bat_to_datH5.py  csv_to_npy.py
(+66 files in other folders)
